pkg/chisel/testdata/valid/09_subtract.chisel
sphere - box.at(1,0,0)
