pkg/chisel/testdata/errors/13_unknown_method.chisel
sphere.translate(1, 0, 0)
